<resources>
    <string name="app_name">Grant Horners Bible Reading System</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="channel_name">Daily Reading</string>
    <string name="channel_description">The daily reading comes in this channel</string>
    <string name="reset_confirm">Are you sure you want to reset all the lists?</string>
    <string name="reset_title">Reset Lists</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="l1">List 1</string>
    <string name="l2">List 2</string>
    <string name="l3">List 3</string>
    <string name="l4">List 4</string>
    <string name="l5">List 5</string>
    <string name="l6">List 6</string>
    <string name="l7">List 7</string>
    <string name="l8">List 8</string>
    <string name="l9">List 9</string>
    <string name="l10">List 10</string>
    <string name="notdone">Mark Done</string>
    <string name="done">Done!</string>
    <string name="reset">Reset Lists</string>
    <string name="psToggle">Psalms Based On Day</string>
    <string name="notToggle">Notifications</string>
    <string name="notifOn">Notifications On</string>
    <string name="noifOff">Notifications Off</string>
    <string-array
    name="list_1">
        <item>Matthew 1</item><item>Matthew 2</item><item>Matthew 3</item><item>Matthew 4</item>
        <item>Matthew 5</item><item>Matthew 6</item><item>Matthew 7</item><item>Matthew 8</item>
        <item>Matthew 9</item><item>Matthew 10</item><item>Matthew 11</item><item>Matthew 12</item>
        <item>Matthew 13</item><item>Matthew 14</item><item>Matthew 15</item><item>Matthew 16</item>
        <item>Matthew 17</item><item>Matthew 18</item><item>Matthew 19</item><item>Matthew 20</item>
        <item>Matthew 21</item><item>Matthew 22</item><item>Matthew 23</item><item>Matthew 24</item>
        <item>Matthew 25</item><item>Matthew 26</item><item>Matthew 27</item><item>Matthew 28</item>
        <item>Mark 1</item><item>Mark 2</item><item>Mark 3</item><item>Mark 4</item>
        <item>Mark 5</item><item>Mark 6</item><item>Mark 7</item><item>Mark 8</item>
        <item>Mark 9</item><item>Mark 10</item><item>Mark 11</item><item>Mark 12</item>
        <item>Mark 13</item><item>Mark 14</item><item>Mark 15</item><item>Mark 16</item>
        <item>Luke 1</item><item>Luke 2</item><item>Luke 3</item><item>Luke 4</item>
        <item>Luke 5</item><item>Luke 6</item><item>Luke 7</item><item>Luke 8</item>
        <item>Luke 9</item><item>Luke 10</item><item>Luke 11</item><item>Luke 12</item>
        <item>Luke 13</item><item>Luke 14</item><item>Luke 15</item><item>Luke 16</item>
        <item>Luke 17</item><item>Luke 18</item><item>Luke 19</item><item>Luke 20</item>
        <item>Luke 21</item><item>Luke 22</item><item>Luke 23</item><item>Luke 24</item>
        <item>John 1</item><item>John 2</item><item>John 3</item><item>John 4</item>
        <item>John 5</item><item>John 6</item><item>John 7</item><item>John 8</item>
        <item>John 9</item><item>John 10</item><item>John 11</item><item>John 12</item>
        <item>John 13</item><item>John 14</item><item>John 15</item><item>John 16</item>
        <item>John 17</item><item>John 18</item><item>John 19</item><item>John 20</item>
        <item>John 21</item>
    </string-array>
    <string-array
        name="list_2">
        <item>Genesis 1</item><item>Genesis 2</item><item>Genesis 3</item><item>Genesis 4</item>
        <item>Genesis 5</item><item>Genesis 6</item><item>Genesis 7</item><item>Genesis 8</item>
        <item>Genesis 9</item><item>Genesis 10</item><item>Genesis 11</item><item>Genesis 12</item>
        <item>Genesis 13</item><item>Genesis 14</item><item>Genesis 15</item><item>Genesis 16</item>
        <item>Genesis 17</item><item>Genesis 18</item><item>Genesis 19</item><item>Genesis 20</item>
        <item>Genesis 21</item><item>Genesis 22</item><item>Genesis 23</item><item>Genesis 24</item>
        <item>Genesis 25</item><item>Genesis 26</item><item>Genesis 27</item><item>Genesis 28</item>
        <item>Genesis 29</item><item>Genesis 30</item><item>Genesis 31</item><item>Genesis 32</item>
        <item>Genesis 33</item><item>Genesis 34</item><item>Genesis 35</item><item>Genesis 36</item>
        <item>Genesis 37</item><item>Genesis 38</item><item>Genesis 39</item><item>Genesis 40</item>
        <item>Genesis 41</item><item>Genesis 42</item><item>Genesis 43</item><item>Genesis 44</item>
        <item>Genesis 45</item><item>Genesis 46</item><item>Genesis 47</item><item>Genesis 48</item>
        <item>Genesis 49</item><item>Genesis 50</item><item>Exodus 1</item><item>Exodus 2</item>
        <item>Exodus 3</item><item>Exodus 4</item><item>Exodus 5</item><item>Exodus 6</item>
        <item>Exodus 7</item><item>Exodus 8</item><item>Exodus 9</item><item>Exodus 10</item>
        <item>Exodus 11</item><item>Exodus 12</item><item>Exodus 13</item><item>Exodus 14</item>
        <item>Exodus 15</item><item>Exodus 16</item><item>Exodus 17</item><item>Exodus 18</item>
        <item>Exodus 19</item><item>Exodus 20</item><item>Exodus 21</item><item>Exodus 22</item>
        <item>Exodus 23</item><item>Exodus 24</item><item>Exodus 25</item><item>Exodus 26</item>
        <item>Exodus 27</item><item>Exodus 28</item><item>Exodus 29</item><item>Exodus 30</item>
        <item>Exodus 31</item><item>Exodus 32</item><item>Exodus 33</item><item>Exodus 34</item>
        <item>Exodus 35</item><item>Exodus 36</item><item>Exodus 37</item><item>Exodus 38</item>
        <item>Exodus 39</item><item>Exodus 40</item><item>Leviticus 1</item><item>Leviticus 2</item>
        <item>Leviticus 3</item><item>Leviticus 4</item><item>Leviticus 5</item><item>Leviticus 6</item>
        <item>Leviticus 7</item><item>Leviticus 8</item><item>Leviticus 9</item><item>Leviticus 10</item>
        <item>Leviticus 11</item><item>Leviticus 12</item><item>Leviticus 13</item><item>Leviticus 14</item>
        <item>Leviticus 15</item><item>Leviticus 16</item><item>Leviticus 17</item><item>Leviticus 18</item>
        <item>Leviticus 19</item><item>Leviticus 20</item><item>Leviticus 21</item><item>Leviticus 22</item>
        <item>Leviticus 23</item><item>Leviticus 24</item><item>Leviticus 25</item><item>Leviticus 26</item>
        <item>Leviticus 27</item><item>Numbers 1</item><item>Numbers 2</item><item>Numbers 3</item>
        <item>Numbers 4</item><item>Numbers 5</item><item>Numbers 6</item><item>Numbers 7</item>
        <item>Numbers 8</item><item>Numbers 9</item><item>Numbers 10</item><item>Numbers 11</item>
        <item>Numbers 12</item><item>Numbers 13</item><item>Numbers 14</item><item>Numbers 15</item>
        <item>Numbers 16</item><item>Numbers 17</item><item>Numbers 18</item><item>Numbers 19</item>
        <item>Numbers 20</item><item>Numbers 21</item><item>Numbers 22</item><item>Numbers 23</item>
        <item>Numbers 24</item><item>Numbers 25</item><item>Numbers 26</item><item>Numbers 27</item>
        <item>Numbers 28</item><item>Numbers 29</item><item>Numbers 30</item><item>Numbers 31</item>
        <item>Numbers 32</item><item>Numbers 33</item><item>Numbers 34</item><item>Numbers 35</item>
        <item>Numbers 36</item><item>Deuteronomy 1</item><item>Deuteronomy 2</item><item>Deuteronomy 3</item>
        <item>Deuteronomy 4</item><item>Deuteronomy 5</item><item>Deuteronomy 6</item><item>Deuteronomy 7</item>
        <item>Deuteronomy 8</item><item>Deuteronomy 9</item><item>Deuteronomy 10</item><item>Deuteronomy 11</item>
        <item>Deuteronomy 12</item><item>Deuteronomy 13</item><item>Deuteronomy 14</item><item>Deuteronomy 15</item>
        <item>Deuteronomy 16</item><item>Deuteronomy 17</item><item>Deuteronomy 18</item><item>Deuteronomy 19</item>
        <item>Deuteronomy 20</item><item>Deuteronomy 21</item><item>Deuteronomy 22</item><item>Deuteronomy 23</item>
        <item>Deuteronomy 24</item><item>Deuteronomy 25</item><item>Deuteronomy 26</item><item>Deuteronomy 27</item>
        <item>Deuteronomy 28</item><item>Deuteronomy 29</item><item>Deuteronomy 30</item><item>Deuteronomy 31</item>
        <item>Deuteronomy 32</item><item>Deuteronomy 33</item><item>Deuteronomy 34</item>
    </string-array>
    <string-array name="list_3">
        <item>Romans 1</item><item>Romans 2</item><item>Romans 3</item><item>Romans 4</item>
        <item>Romans 5</item><item>Romans 6</item><item>Romans 7</item><item>Romans 8</item>
        <item>Romans 9</item><item>Romans 10</item><item>Romans 11</item><item>Romans 12</item>
        <item>Romans 13</item><item>Romans 14</item><item>Romans 15</item><item>Romans 16</item>
        <item>1 Corinthians 1</item><item>1 Corinthians 2</item><item>1 Corinthians 3</item><item>1 Corinthians 4</item>
        <item>1 Corinthians 5</item><item>1 Corinthians 6</item><item>1 Corinthians 7</item><item>1 Corinthians 8</item>
        <item>1 Corinthians 9</item><item>1 Corinthians 10</item><item>1 Corinthians 11</item><item>1 Corinthians 12</item>
        <item>1 Corinthians 13</item><item>1 Corinthians 14</item><item>1 Corinthians 15</item><item>1 Corinthians 16</item>
        <item>2 Corinthians 1</item><item>2 Corinthians 2</item><item>2 Corinthians 3</item><item>2 Corinthians 4</item>
        <item>2 Corinthians 5</item><item>2 Corinthians 6</item><item>2 Corinthians 7</item><item>2 Corinthians 8</item>
        <item>2 Corinthians 9</item><item>2 Corinthians 10</item><item>2 Corinthians 11</item><item>2 Corinthians 12</item>
        <item>2 Corinthians 13</item><item>Galatians 1</item><item>Galatians 2</item><item>Galatians 3</item>
        <item>Galatians 4</item><item>Galatians 5</item><item>Galatians 6</item><item>Ephesians 1</item>
        <item>Ephesians 2</item><item>Ephesians 3</item><item>Ephesians 4</item><item>Ephesians 5</item>
        <item>Ephesians 6</item><item>Philippians 1</item><item>Philippians 2</item><item>Philippians 3</item>
        <item>Philippians 4</item><item>Colossians 1</item><item>Colossians 2</item><item>Colossians 3</item>
        <item>Colossians 4</item><item>Hebrews 1</item><item>Hebrews 2</item><item>Hebrews 3</item>
        <item>Hebrews 4</item><item>Hebrews 5</item><item>Hebrews 6</item><item>Hebrews 7</item>
        <item>Hebrews 8</item><item>Hebrews 9</item><item>Hebrews 10</item><item>Hebrews 11</item>
        <item>Hebrews 12</item><item>Hebrews 13</item>
    </string-array>
</resources>